feat: implement Phase 2 enhancements
- Add responsive no-scroll dashboard layout with 3-column grid
- Implement mobile hamburger menu with slide-in sidebar
- Integrate real-time data synchronization (10s intervals)
- Add event creation modal with form validation
- Implement local storage persistence for events
- Add toast notification system with 4 types
- Add comprehensive error handling and loading states
- Fix time formatting with leading zeros
- Optimize event listener setup
- Add live time display in header

--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Event Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="src/styles/base.css">
-    <link rel="stylesheet" href="src/styles/layouts.css">
-    <link rel="stylesheet" href="src/styles/components.css">
+    <link rel="stylesheet" href="src/styles/base.css?v=10">
+    <link rel="stylesheet" href="src/styles/layout.css?v=10">
+    <link rel="stylesheet" href="src/styles/components.css?v=10">
 </head>
 <body>
     <div id="app">
-        <!-- App will be rendered here by JavaScript -->
         <div class="loading">
             <i class="fas fa-spinner fa-spin"></i>
             <p>Loading Dashboard...</p>
         </div>
     </div>
-
-    <script type="module" src="src/app.js"></script>
+    <script type="module" src="src/App.js?v=10"></script>
 </body>
 </html>
