refactor: complete modular overhaul
- Move all components to src/components/, UI helpers to src/ui/, services to src/services/
- Flatten utils → single powerful src/index.js (god file)
- App.js now fully re-renders the dashboard on every update
- Add comprehensive Playwright E2E test suite (10 tests)
- Implement edit/delete events with confirmation modal
- Add mobile menu toggle component and mobile-first sidebar
- Add screenshots to docs/images/ and update README with beautiful previews
- Update Todo.md, CHANGELOG.md, and README.md to reflect current reality

Known regression (being fixed next):
- Mobile sidebar toggle / outside-click close currently broken after re-render

Next step: restore mobile sidebar functionality → make all tests green → v1.0.0

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Event Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="src/styles/base.css?v=11">
-    <link rel="stylesheet" href="src/styles/layout.css?v=11">
-    <link rel="stylesheet" href="src/styles/components.css?v=11">
+    <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <div id="app">
@@ -16,6 +14,6 @@
             <p>Loading Dashboard...</p>
         </div>
     </div>
-    <script type="module" src="src/App.js?v=11"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
